unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/litify_pm__CalendarRulesTrigger__c.object-meta.xml
<CustomObject>
    <description>The trigger item retrieved from CalendarRules to be referenced by all child Events.</description>
    <label>Calendar Rules Trigger</label>
    <nameField>
        <label>Calendar Rules Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendarRulesTriggers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>