unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__ChangeReason__c</fullName>
    <description>Capture reason for change of date, value to be stored on Log object for auditing purposes</description>
    <inlineHelpText>Capture reason for change of date, value to be stored on Log object for auditing purposes</inlineHelpText>
    <label>Change Reason</label>
    <type>TextArea</type>
</CustomField>