unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Description__c</fullName>
    <description>The description of the calendar rules trigger</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>