unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__EventChangeLog__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__EventChangeLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Junction object to connect Trigger with Change Logs</description>
    <inlineHelpText>Junction object to connect Trigger with Change Logs</inlineHelpText>
    <label>Event Change Log</label>
    <referenceTo>litify_pm__EventLogJunction__c</referenceTo>
    <relationshipLabel>Triggers</relationshipLabel>
    <relationshipName>Triggers</relationshipName>
    <type>Lookup</type>
</CustomField>