unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__JurisdictionID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__JurisdictionID__c</fullName>
    <description>Jurisdiction ID for the Trigger</description>
    <inlineHelpText>Jurisdiction ID for the Trigger</inlineHelpText>
    <label>Jurisdiction ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>