unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Matter__c</fullName>
    <description>The Matter that this trigger relates to</description>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>CalendarRulesTriggers</relationshipLabel>
    <relationshipName>CalendarRulesTriggers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>