unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__Service__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Service__c</fullName>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>