unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__SystemID__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__SystemID__c</fullName>
    <description>The System ID of the Calendar Rule Trigger</description>
    <label>Calendar Rules System ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>