unpackaged/main/default/objects/litify_pm__CalendarRulesTrigger__c/fields/litify_pm__TriggerDate__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__TriggerDate__c</fullName>
    <description>Date of Trigger set by User on Event creation</description>
    <inlineHelpText>Date of Trigger set by User on Event creation</inlineHelpText>
    <label>Trigger Date</label>
    <type>DateTime</type>
</CustomField>